@@ -1,6 +1,11 @@
+2006-04-12  Joris Van Damme  <joris.at.lebbeke@skynet.be>
+
+	* libtiff/tif_getimage.c: Added support for planarconfig separate
+	non-subsampled YCbCr (i.e. separate YCbCr with subsampling [1,1])
+
 2006-04-11  Joris Van Damme  <joris.at.lebbeke@skynet.be>
 	
-	* libtiff/tiff_getimage.c: Revision of all RGB(A) put routines
+	* libtiff/tif_getimage.c: Revision of all RGB(A) put routines
 	- Conversion of unassociated alpha to associated alpha now done with
 	  more performant LUT, and calculation more correct
 	- Conversion of 16bit data to 8bit data now done with
@@ -9,7 +14,7 @@
 
 2006-04-11  Joris Van Damme  <joris.at.lebbeke@skynet.be>
 	
-	* libtiff/tiff_getimage.c: 
+	* libtiff/tif_getimage.c: 
 	- When there is no alpha, gtTileSeparate and gtStripSeparate allocated 
 	  buffer for alpha strile and filled it, only to never read it back. 
 	  Removed allocation and fill.
